--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,70 @@
-# BD Product Feed WordPress Plugin  
-  
-# WordPress  
-wp-config.php  
-wp-content/uploads/  
-  
-# Plugin specific  
-feeds/  
-*.log  
-  
-# Development  
-node_modules/  
-.vscode/  
-.DS_Store  
-Thumbs.db 
+# WordPress
+wp-config.php
+wp-content/uploads/
+wp-content/cache/
+wp-content/backup-db/
+wp-content/advanced-cache.php
+wp-content/wp-cache-config.php
+wp-content/blogs.dir/
+wp-content/upgrade/
+wp-content/backup-db/
+wp-content/wp-cache-config.php
+wp-content/cache/
+
+# Plugin development files
+*.log
+*.tmp
+.DS_Store
+Thumbs.db
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# Development and documentation files (not needed in production)
+BD-GitHub-Update-System-Guide.txt
+BD-Plugin-Design-Guide.txt
+BD-Product-Feed-Architecture.md
+bd-menu-helper.php
+
+# Node modules and build files
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Composer
+vendor/
+composer.lock
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Backup files
+*.bak
+*.backup
+*.old
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE files
+.idea/
+.vscode/
+*.sublime-project
+*.sublime-workspace
+
+# Temporary files
+*.tmp
+*.temp
